@@ -1,3 +1,9 @@
+2019-12-20  Jerome Lambourg  <lambourg@adacore.com>
+
+	* acinclude.m4 (_GLIBCXX_USE_PTHREAD_RWLOCK_T): Checks that _PTHREADS
+	is defined after including gthr.h.
+	* configure: Regenerate.
+
 2019-12-12  Jonathan Wakely  <jwakely@redhat.com>
 
 	* libsupc++/compare (common_comparison_category): Define without using
